--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<link rel="author" href="https://plus.google.com/u/0/104296509460513856975" />
 
 		<!-- Google Fonts -->
-		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet'>
-		<link href='http://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic' rel='stylesheet'>
+		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet'>
+		<link href='https://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic' rel='stylesheet'>
 
 		<!-- Css -->
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
